Fixed folder navbar collapsing and added another button to the select bar.

--- a/src/main/resources/static/css/folder.css
+++ b/src/main/resources/static/css/folder.css
@@ -148,9 +148,7 @@
 .folder-navbar-selected{
     display: none;
 }
-.folder-navbar-selected li{
-    display: inline;
-}
+
 .folder-navbar-selected > li > .dropdown-menu > .div:hover {
     background: #343a4026;
     cursor:pointer;
